--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,25 +22,28 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-          enable-AzPSSession: true 
+      - name: Run a one-line script
+        run: echo Hello, world from build!
+  
+  Test:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    needs: Build
 
-      - name: Deploy resources
-        uses: azure/powershell@v1
-        with:
-          inlineScript: |
-            .\deploy-resources-function-plan-storage-webapp.ps1
-          azPSVersion: "latest"
-          
+    steps:
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: echo Hello, world from Test!
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+  Prod:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    environment:
+       name: s195needsApprove
+    needs: Test
+
+    steps:
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world form Prod!
+
